[package]
name = "rss2email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.5.0"
log = "0.4.17"
serde-xml-rs = "0.6.0"
serde = "1.0.144"
serde_derive = "1.0.144"
chrono = "0.4.22"
itertools = "0.10.3"
env_logger = "0.9.0"
dotenv = "0.15.0"
regex = "1"
lazy_static = "1.4.0"
enum_dispatch = "0.3.8"
futures = "0.3.24"
tokio = { version = "1", default-features = false}
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

lambda_runtime = { version = "0.6.0", optional = true }
tracing = { version = "0.1", features = ["log"], optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"], optional = true }


[features]
aws-lambda = [ "dep:lambda_runtime", "dep:tracing", "dep:tracing-subscriber" ]

[dev-dependencies]
criterion = { version = "0.4.0", features = [ "html_reports" ]}

[[bench]]
name = "bench_main"
harness = false

# [target.'cfg(unix)'.dependencies]
# openssl = "0.10.42"