[package]
name = "rss2email"
description = "An RSS feed aggregator that notifies you of new posts via email."
license = "GPL-3.0"
repository = "https://github.com/AntoniosBarotsis/Rss2Email"
keywords = ["rss", "atom", "email"]
categories = ["feed", "email", "blog"]
readme = "README.md"
version = "2.1.1"
edition = "2021"

[[bin]]
name = "rss2email"
path = "src/main.rs"

[lib]
name = "rss2email_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.144"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
itertools = "0.12.1"
env_logger = "0.11.1"
dotenvy = "0.15.5"
regex = "1.7.0"
lazy_static = "1.4.0"
once_cell = "1.15.0"
enum_dispatch = "0.3.8"
futures = "0.3.24"
tokio = { version = "1.25.0", default-features = false, features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
http = "1.0.0"
resend-rs = { version = "0.4.0", default-features = false, features = ["blocking", "rustls-tls"] }

lambda_runtime = { version = "0.9.1", optional = true }
tracing = { version = "0.1", features = ["log"], optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"], optional = true }


[features]
aws-lambda = ["dep:lambda_runtime", "dep:tracing", "dep:tracing-subscriber"]

[dev-dependencies]
criterion = { version = "0.5.1", features = [ "html_reports" ]}
pretty_assertions = "1.3.0"

[[bench]]
name = "bench_main"
harness = false
